--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,7 +28,7 @@ environment:
 # versions available, run `flutter pub outdated`.
 dependencies:
   animated_splash_screen: ^1.3.0
-  cached_network_image: ^3.2.2
+  cached_network_image:
   cloud_firestore: ^3.4.6
   cupertino_icons: ^1.0.2
   firebase_auth: ^3.7.0
@@ -41,14 +41,19 @@ dependencies:
   flutter_emoji: ^2.4.0
   flutter_svg: ^1.1.4
   get: ^4.6.5
+  image_cropper: ^3.0.1
   image_picker: ^0.8.5+3
   introduction_screen: ^3.0.1
   lottie: ^1.4.2
+  internet_connection_checker: ^0.0.1
+  material_design_icons_flutter: ^5.0.6295
   model_viewer_plus: ^1.3.3
+  panara_dialogs: ^0.1.4
   timeago: ^3.3.0
   video_compress: ^3.1.1
   video_player: ^2.4.7
   webview_flutter: ^3.0.4
+  rflutter_alert: ^2.0.0
 
 dev_dependencies:
   flutter_lints: ^1.0.0
